--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
   <head>
-    
+    <script src="script.js" defer></script>
   </head>
-    <p> Yo</p>
-  <body>
     
+  <body>
+    <p> Yo</p>
+    <canvas id="canvas1" width="800" height="800"></canvas>
   </body>
 </html>
