--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js" defer></script>
     <title>Mars Quest</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="img/png" href="/PHOTOS/icon.png" sizes="32x32">
+    <link rel="icon" type="img/png" href="/photos/mapquest.png" sizes="32x32">
   </head>
     
   <body>
