--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
     
   <body>
-    <p> Yo</p>
+    <h1 class="header">Space Quest</h1>
     <canvas id="canvas1" width="800" height="800"></canvas>
   </body>
 </html>
