--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <h1 class="header">Mars Quest</h1>
     <canvas id="canvas1" width="600" height="600"></canvas>
     <script src="script.js" defer></script>
-    
-    <button id="up-button">Up</button>
-    <button id="down-button">Down</button>
-    <button id="left-button">Left</button>
-    <button id="right-button">Right</button>
+    <div id = "mobile-controls">
+      <button id="up-button">Up</button>
+      <button id="down-button">Down</button>
+      <button id="left-button">Left</button>
+      <button id="right-button">Right</button>
+    </div>
   </body>
 </html>
