--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mars Quest</title>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="img/png" href="/photos/mapquest.png" sizes="32x32">
   </head>
     
   <body>
     <h1 class="header">Mars Quest</h1>
-    <canvas id="canvas1" width="600" height="600"></canvas>
-    <script src="script.js" defer></script>
+    <canvas id="canvas1" width="1000" height="600"></canvas>
+    
+    <button id="fullscreen">Fullscreen</button>
     <div id = "mobile-controls">
       <button id="up-button">Up</button>
       <button id="down-button">Down</button>
