--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mars Quest</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
@@ -12,7 +12,7 @@
     
   <body>
     <h1 class="header">Mars Quest</h1>
-    <canvas id="canvas1" width="1000" height="600"></canvas>
+    <canvas id="canvas1"></canvas>
     <button id="fullscreen">Fullscreen</button>
     <div id = "mobile-controls">
       <button id="up-button">Up</button>
